fixed grid (and alignment for now)

--- a/style.scss
+++ b/style.scss
@@ -2,16 +2,11 @@
 @use "./scss/base/base.scss" as*;
 
 .calculator {
-  display: grid;
-  grid-template-rows: (2fr, 1fr, 1fr, 1fr 1fr, 1fr);
-  grid-template-columns: repeat(4, 1fr);
-  max-width: 380px;
+  max-width: 370px;
   margin: 1.2rem;
   margin-top: 5rem;
 
   .calculator__display {
-    grid-row:1/3;
-    grid-column:1/5;
     font-size: 2.5rem;
     font-family: $base-font;
     color:#36454F;
@@ -36,6 +31,11 @@
 }
 
 .calculator__buttons{
+  display: grid;
+  grid-template-rows: repeat(5, 1fr);
+  grid-template-columns: repeat(4,1fr);
+  justify-items: center;
+  align-items: center;
   background-color: #FEFEFE;
   grid-row:3/8;
   grid-column:1/5;
@@ -54,14 +54,11 @@
     font-family: $base-font;
     font-weight: 500;
     font-size:large;
-    max-width: 2.5rem;
+    line-height: 25%;
+    width: 2.5rem;
     padding: 2.2rem;
     height: 2.5rem;
-    margin: 0.5rem;
-    display: inline-block;
-    text-align: center;
-    line-height: 30%;
-    justify-self: center;
+    text-indent: -0.28rem;
     
 
     &--operator {
@@ -73,8 +70,19 @@
     }
 
     &--zero {
-      min-width:10rem;
+      grid-column: span 2;
+      min-width: 9.8rem;
       text-align: center;
+      text-indent: 0.1rem;
+    }
+
+    &--delete {
+      text-indent: -0.8rem;
+    }
+
+    &--point {
+      text-indent: -0.05rem;
+      line-height: 05%;
     }
   }
 }  
